added link to original arxiv dataset

--- a/IPYNBFiles+PythonServer/ArxivDatasetManipulation.ipynb
+++ b/IPYNBFiles+PythonServer/ArxivDatasetManipulation.ipynb
@@ -17,6 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# replace this with the path to the original arxiv dataset which can be found here: https://www.kaggle.com/datasets/1b6883fb66c5e7f67c697c2547022cc04c9ee98c3742f9a4d6c671b4f4eda591\n",
     "loaded_data = db.read_text(\"PATHTODATASET//arxiv-metadata-oai-snapshot.json\").map(json.loads)"
    ]
   },
