--- a/IPYNBFiles+PythonServer/ArxivDatasetManipulation.ipynb
+++ b/IPYNBFiles+PythonServer/ArxivDatasetManipulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,51 +13,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# replace this with the path to the original arxiv dataset which can be found here: https://www.kaggle.com/datasets/1b6883fb66c5e7f67c697c2547022cc04c9ee98c3742f9a4d6c671b4f4eda591\n",
-    "loaded_data = db.read_text(\"PATHTODATASET//arxiv-metadata-oai-snapshot.json\").map(json.loads)"
+    "#Replace this with the path to the original arxiv dataset if you want which can be found here: https://www.kaggle.com/datasets/1b6883fb66c5e7f67c697c2547022cc04c9ee98c3742f9a4d6c671b4f4eda591\n",
+    "#For speed and ease of use reasons a small 10000 object version of the dataset is being loaded\n",
+    "loaded_data = db.read_text(\"ArxivMiniCompactDataset10000.json\").map(json.loads)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The dataset has 2223467 entires.\n",
+      "The dataset has 10000 entires.\n",
       "Data Structure:\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "({'id': '0704.0001',\n",
-       "  'submitter': 'Pavel Nadolsky',\n",
-       "  'authors': \"C. Bal\\\\'azs, E. L. Berger, P. M. Nadolsky, C.-P. Yuan\",\n",
-       "  'title': 'Calculation of prompt diphoton production cross sections at Tevatron and\\n  LHC energies',\n",
-       "  'comments': '37 pages, 15 figures; published version',\n",
-       "  'journal-ref': 'Phys.Rev.D76:013009,2007',\n",
-       "  'doi': '10.1103/PhysRevD.76.013009',\n",
-       "  'report-no': 'ANL-HEP-PR-07-12',\n",
-       "  'categories': 'hep-ph',\n",
-       "  'license': None,\n",
-       "  'abstract': '  A fully differential calculation in perturbative quantum chromodynamics is\\npresented for the production of massive photon pairs at hadron colliders. All\\nnext-to-leading order perturbative contributions from quark-antiquark,\\ngluon-(anti)quark, and gluon-gluon subprocesses are included, as well as\\nall-orders resummation of initial-state gluon radiation valid at\\nnext-to-next-to-leading logarithmic accuracy. The region of phase space is\\nspecified in which the calculation is most reliable. Good agreement is\\ndemonstrated with data from the Fermilab Tevatron, and predictions are made for\\nmore detailed tests with CDF and DO data. Predictions are shown for\\ndistributions of diphoton pairs produced at the energy of the Large Hadron\\nCollider (LHC). Distributions of the diphoton pairs from the decay of a Higgs\\nboson are contrasted with those produced from QCD processes at the LHC, showing\\nthat enhanced sensitivity to the signal can be obtained with judicious\\nselection of events.\\n',\n",
-       "  'versions': [{'version': 'v1', 'created': 'Mon, 2 Apr 2007 19:18:42 GMT'},\n",
-       "   {'version': 'v2', 'created': 'Tue, 24 Jul 2007 20:10:27 GMT'}],\n",
-       "  'update_date': '2008-11-26',\n",
-       "  'authors_parsed': [['Balázs', 'C.', ''],\n",
-       "   ['Berger', 'E. L.', ''],\n",
-       "   ['Nadolsky', 'P. M.', ''],\n",
-       "   ['Yuan', 'C. -P.', '']]},)"
+       "({'pdfId': '0704.0001',\n",
+       "  'title': 'Calculation of prompt diphoton production cross sections at Tevatron and   LHC energies',\n",
+       "  'categories': ['hep-ph'],\n",
+       "  'abstract': '  A fully differential calculation in perturbative quantum chromodynamics is presented for the production of massive photon pairs at hadron colliders. All next-to-leading order perturbative contributions from quark-antiquark, gluon-(anti)quark, and gluon-gluon subprocesses are included, as well as all-orders resummation of initial-state gluon radiation valid at next-to-next-to-leading logarithmic accuracy. The region of phase space is specified in which the calculation is most reliable. Good agreement is demonstrated with data from the Fermilab Tevatron, and predictions are made for more detailed tests with CDF and DO data. Predictions are shown for distributions of diphoton pairs produced at the energy of the Large Hadron Collider (LHC). Distributions of the diphoton pairs from the decay of a Higgs boson are contrasted with those produced from QCD processes at the LHC, showing that enhanced sensitivity to the signal can be obtained with judicious selection of events. ',\n",
+       "  'version': 2007},)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
